--- a/src/page/imports.scss
+++ b/src/page/imports.scss
@@ -4,4 +4,4 @@
 @import './components/color-tolerance/color-tolerance.scss';
 @import './components/color-tolerance/tolerance-component.scss';
 @import './components/resistor.scss';
-@import './components/footer.scss';
+@import './components/footer/footer.scss';
