use absolute pathing and better fs

--- a/src/page/imports.scss
+++ b/src/page/imports.scss
@@ -1,7 +1,7 @@
-@import './components/color-input/color-input.scss';
-@import './components/color-strip/color-strip.scss';
-@import './components/color-strip/color-picker.scss';
-@import './components/color-tolerance/color-tolerance.scss';
-@import './components/color-tolerance/tolerance-component.scss';
-@import './components/resistor.scss';
-@import './components/footer/footer.scss';
+@import 'components/color-input/color-input.scss';
+@import 'components/color-strip/color-strip.scss';
+@import 'components/color-picker/color-picker.scss';
+@import 'components/color-tolerance/color-tolerance.scss';
+@import 'components/tolerance/tolerance-container.scss';
+@import 'components/resistor/resistor.scss';
+@import 'components/footer/footer.scss';
